Sun Nov  6 21:54:28 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/vcs.rb (export_changelog): generate ChangeLog file from
	  vcs's log. [Feature #12283]

	* tool/make-snapshot (package): overwrite ChangeLog by generated
	  ChangeLog.

Sun Nov  6 21:36:33 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* NEWS: Added entry for RDoc 5.

Sun Nov  6 21:35:37 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* NEWS: ordered entries and adjust styles.

Sun Nov  6 18:23:31 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* NEWS: Added entry for [Feature #12160][ruby-core:74239]

Sun Nov  6 18:18:25 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* NEWS: Added entry for r56624.

Sun Nov  6 15:53:03 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* configure.in (-Wno-maybe-uninitialized): gcc 6 also shows the same
	  warnings as described in r49410.

Sun Nov  6 14:42:50 2016  takkanm  <takkanm@gmail.com>

	* eval.c (rb_mod_include, rb_mod_prepend): check if arguments are
	  given, as well as Kernel#extend.  [ruby-dev:49854] [Bug #12887]
	  [Fix GH-1470]

Sun Nov  6 11:59:05 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* test/rinda/test_rinda.rb (test_make_socket_ipv6_multicast,
	  test_make_socket_ipv6_multicast_hops): skip if IPv6 multicast
	  address is not available.

Sun Nov  6 11:53:23 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/irb.rb (Binding#irb): new method like Binding#pry.

Sun Nov  6 11:48:55 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* test/net/smtp/test_smtp.rb (test_tls_connect, test_tls_connect):
	  use Socket.tcp_server_sockets in case localhost is resolved to ::1.

Sun Nov  6 11:49:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/irb.rb (IRB::Irb#run): split from IRB.start.

Sun Nov  6 11:45:11 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/e2mmap.rb (E2MM.def_exception): remove old definition if
	  exists so that works multiple times.

Sun Nov  6 10:03:00 2016  Shugo Maeda  <shugo@ruby-lang.org>
